# storyteller

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO  chatbot.py  chatbot2.py  discordbot.py  instructions.md  justfile  pyproject.toml  quickrun.py  webservice.py
adr/: 001-errors-are-events.md  template.md
bot/: __init__.py  commands.py
bruno/Storyteller API/: Create a new story.bru  Execute a command on the story.bru  Get story details.bru  bruno.json
docs/: chatbot.md  discordbot.md  quickrun.md  restapi.json  restapi.md  webservice.md
prompts/storyteller/prompts/: base_prompt.md  chapter_summary_prompt.md  character_create_prompt.md  character_summary_prompt.md  fix_prompt.md  opening_suggestions_prompt.md  summary_prompt.md
prompts/storyteller/prompts2/: chapter_summary_prompt.md  fix_prompt.md  summary_prompt.md
prompts/storyteller/stories/genfantasy/: characters.md  chargen.md  start.md
scripts/: dump_swagger.py
storyteller/: __init__.py  commands.py  common.py  engine.py  eventstream.py  idgen.py  models.py
tests/: test_eventstream.py
