[project]
name = "chatbot"
version = "0.1.0"
description = "A chatbot using LangChain and Ollama"
requires-python = ">=3.12"
dependencies = [
    "langchain[google-genai]>=0.3.23",
    "langchain-ollama>=0.0.1",
    "langchain-core>=0.1.0",
    "python-dotenv>=1.1.0",
    "langgraph>=0.3.31",
    "pydantic>=2.11.3",
    "langchain-openai>=0.3.14",
    "langchain-anthropic>=0.3.12",
    "langchain-xai>=0.2.3",
    "discord-py>=2.5.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "auth0-fastapi-api>=1.0.0b3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[tool.ruff]
lint.select = ["UP"]
target-version = "py39"